# agentflow

./: .dockerignore  .gitignore  LICENSE  Readme.md  docker-compose.yml  install.md  log.20250228e.md  log.md  metadata.npy  pyproject.toml  requirement.txt  requirements.txt  运行成功agentflow_log.md
AgentFlow/: __init__.py  data_model.py  main.py  prompt_template.py  solution.py  work_flow.py
AgentFlow/flows/: __init__.py  auto_sched_flow.py  base_flow.py  loop_flow.py  repeat_flow.py  sequential_flow.py
AgentFlow/nodes/: __init__.py  base_node.py  claude_code_node.py  interactive_node.py  loop_questionnaire_node.py  questionnaire_node.py  reflective_node.py  selector_group_chat_node.py  translation_node.py  wr124_node.py
AgentFlow/tests/: arctic_merge.py  arctic_prompts.py  galsim_merge.py  galsim_prompts.py
AgentFlow/tools/: README.md  TranslationAgent.py  __init__.py  abstract_syntax_tree.py  clang_parser.py  code_graph.py  code_graph_tool.py  code_rag_tools.py  code_rag_tools_v1.py  code_tool.py  cpp_project.py  designer.py  file_edit.py  file_edit_v2.py  file_tool.py  language_config.py  mcp_server.py  parser_base.py  project.py  project_base.py  project_tools.py  repo_rag.py  shell_tool.py  tree_sitter_parser.py  uml_tool.py  utils.py
CodeRAG/: .cursorignore  app.py  main.py  prompt_flow.py  repomap_output.txt  run_script.sh
container/: .dockerignore  Dockerfile  build-in-container-test.sh  build.sh  entrypoint.sh  readme.md  run-podman.sh  supervisord.conf
docs/: configuration_guide.md  docker.sh  dockerfile  llm_config_list_template.json  model.md  server_guide.md
script/: .env  README.md  download_repos.py  export_team.py  mcp_test.py  memory_rag.ipynb  raglo0325.md  raglog0331-MapReduce.md  raglog0331-refine.md  run.sh  test.ipynb  test.py
studio/: .config.yml  .gitignore
(+128 files in other folders)
